# Medical_Data_ETL_Project

./: .gitignore  README.md  compose.yml  dockerfile  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: sample_medical_data.csv
docs/: CLAUDE_CODE_PROMPTS.md  CONCEPT.md  LEARNING_LOG.md  LESSON_PLAN.md  PROJECT_BACKGROUND.md
services/: database.py  etl.py
tests/: test_api.py  test_etl.py
